[package]
name = "tsurch"
version = "0.1.0"
authors = ["vkcz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

html2text = "0.1.14"

reqwest = { version = "0.10.8", features = ["blocking"] }

serde = { version = "1.0.115", features = ["derive"] }